# open-refinery

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PLAN.md  README.md  USER_GUIDE.md  docker-compose.yml  index.html  open-refinery.db-shm  open-refinery.db-wal  pyproject.toml
.claude/references/: README.md  deterministic-queue.md  harness-vs-platform.md  no-sub-agents.md  ports-and-adapters.md
.claude/rules/: dev-workflow.md  simplicity.md  structured-output.md  tests-tdd.md
docs/: ARCHITECTURE.md
frontend/: .env.development  .gitignore  index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  Brand.tsx  api-types.ts  api.ts  index.css  theme.ts
src/open_refinery/: __init__.py  analysis.py  anomalies.py  approval_workflows.py  approvals.py  attestations.py  audit.py  auditors.py  authz.py  cli.py  concurrency.py  crypto.py  debt.py  deps.py  email.py  escalations.py  evidence.py  executor.py  experiments.py  factory.py  governance.py  harnesses.py  ingest.py  integrations.py  invitations.py  jobs.py  ledger.py  live.py  logs.py  metrics.py  mfa.py  migrations.py  models.py  notifications.py  oauth.py  oidc.py  oversight.py  packs.py  policies.py  postmortem.py  (+19 more)
src/open_refinery/routers/: core.py  governance.py  harness.py  ops.py  org.py  policy.py  recert.py  routing.py  scim.py  systems.py  workitem.py
tests/: test_analysis.py  test_anomalies.py  test_approval_sla.py  test_approval_workflows.py  test_approvals.py  test_attestations.py  test_audit_chain.py  test_authz.py  test_backends.py  test_cli.py  test_debt.py  test_enforcement.py  test_evidence.py  test_executor.py  test_experiments.py  test_factory.py  test_governance.py  test_hardening.py  test_harnesses.py  test_ingest.py  test_integrations.py  test_invitations.py  test_jobs.py  test_live.py  test_login.py  test_logs_and_apply.py  test_mcp.py  test_metrics.py  test_mfa.py  test_migrations.py  test_notifications.py  test_oauth.py  test_oidc.py  test_oversight.py  test_packs.py  test_policies.py  test_policy_versions.py  test_postmortem.py  test_processes.py  test_recert.py  (+23 more)
