[project]
name = "open-refinery"
version = "0.1.0"
description = "A factory for producing artifacts under governance — provenance, ownership, authorization, and an append-only audit trail on every output."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ian Johnson", email = "ian@tacoda.dev" }]
keywords = ["provenance", "audit", "governance", "factory", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/tacoda/open-refinery"
Repository = "https://github.com/tacoda/open-refinery"

[project.scripts]
open-refinery = "open_refinery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_refinery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
