[project]
name = "open-refinery"
version = "1.6.0"
description = "A factory for producing artifacts under governance — provenance, ownership, authorization, and an append-only audit trail on every output."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ian Johnson", email = "ian@tacoda.dev" }]
keywords = ["provenance", "audit", "governance", "factory", "observability"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "cryptography>=43",
    "sqlmodel>=0.0.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
providers = ["anthropic>=0.40", "openai>=1.40"]  # real model backends (opt-in)

[project.urls]
Homepage = "https://github.com/tacoda/open-refinery"
Repository = "https://github.com/tacoda/open-refinery"

[project.scripts]
open-refinery = "open_refinery.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_refinery"]

# The built dashboard is gitignored (compiled at release time); force it into the
# wheel so `pip install` ships the SPA without the end user needing bun/node.
[tool.hatch.build.targets.wheel.force-include]
"src/open_refinery/static" = "open_refinery/static"

# Include the built SPA in the sdist too (it's gitignored), so a wheel built
# from the sdist is self-sufficient and sdist installs also ship the dashboard.
[tool.hatch.build.targets.sdist]
artifacts = ["src/open_refinery/static"]

[tool.pytest.ini_options]
testpaths = ["tests"]
